Windows specific issues in combination of JEP 493 and --with-external-symbols-in-bundles=public

XMLWordPrintable

    • b24
    • 24
    • b27
    • windows

      JEP 493 added a feature to link runtimes without JMOD files.

      When enabling that feature (e.g. through configure option --enable-linkable-runtime) and also using the option to ship external symbols of type "public" on Windows (--with-external-symbols-in-bundles=public), e.g. stripped pdb files that don't contain full debug information but help to get line numbers in hs_err files, several tests related to JLink fail.

      For instance the test "tools/jlink/basic/BasicTest.java" fails and you find error output like this:
      Error: <test-vm-path>\\bin\\keytool.exe.pdb has been modified

      The proposed fix is to (only) have the correct set of debug symbol files in the jdk/jre images in <build-dir>/images. So either full, public or none. As a side effect, this removes any debug symbol files in the jdk/jre images in the default configuration (no external debug files in bundles) which matches the actually shipped bundle.

            Assignee:
            Christoph Langer
            Reporter:
            Christoph Langer
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: