8351842: Windows specific issues in combination of JEP 493 and --with-external-symbols-in-bundles=public

Reviewed-by: erikj, mbaesken